[project]
name = "goquant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.9.4",
    "pandas>=2.3.1",
    "pip>=25.2",
    "scikit-learn>=1.6.1",
    "tensorflow>=2.19.0",
]
